[tool.poetry]
name = "screen-thyme"
version = "0.2.0"
description = "a tiny library designed to automate of exporting Apple Screen Time and/or ActivityWatch data to a PostgreSQL database."
authors = ["Edwin Zamudio <zamudio.e13@gmail.com>"]
readme = "README.md"
packages = [{ include = "screen_thyme" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.1"
pandas = "^2.1.3"
sqlalchemy = "^2.0.23"
structlog = "^23.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "screen_thyme:main"
example = "examples:main"
