[tool.poetry]
name = "screen-thyme"
version = "0.3.0"
description = "a tiny library designed to automate of exporting Apple Screen Time and/or ActivityWatch data to a PostgreSQL database."
authors = ["Edwin Zamudio <zamudio.e13@gmail.com>"]
readme = "README.md"
packages = [{ include = "screen_thyme" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.1"
structlog = "^23.2.0"
duckdb = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "screen_thyme:main"
example = "examples:main"
